Get tasks from database

--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
     </head>
 
     <body>
-        <div class = list>
-            <div class = task id="1">
+        <h1>Task Tracker</h1>
+        <div class = list id="task_list">
+            <div class = task>
                 <input type="checkbox">
-                <p>Task1</p>
-            </div>
-            <div class = task id="2">
-                <input type="checkbox">
-                <p>Task2</p>
+                <p>Example Task</p>
             </div>
         </div>
 
-        <p id="mytext">Hello!</p>
+        <!--<input type="text">-->
         
-        <script type="module" src="./firebase.js"></script>
+        <script type="module" src="./firebase_funcs.js"></script>
         <script type="module" src="./main.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="jquery.js"></script>
